PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Implement email notifications on result uploads
- phoromatic: Implement email notifications on system generated errors/warnings
- phoromatic: Implement email notifications on new systems added

Phoronix Test Suite 5.4 Milestone 4
5 November 2014

- pts-core: Add 3840 x 2160 (4K UHD) to more of the mode-setting fall-back modes
- pts-core: Start working on support for using standard Linux file-system hierarchy when running as root as a service
- pts-core: Add PhoromaticStorage option to Phoronix Test Suite user configuration XML file
- phoromatic: Reporting of overall result counts for given test schedules
- phoromatic: Report benchmarking / test run errors to server
- phoromatic: Show system errors/warnings from the Phoromatic web UI
- phoromatic: Don't attempt to re-run test schedules on clients if they previously reported errors/warnings for that schedule / trigger ID combination
- phoromatic: Usernames need to be at least four characters long
- phoromatic: Add a schedule overview to the schedules page
- phoromatic: Add today's scheduled events to the side bar
- phoromatic: Improve result identifier / title reporting for results
- phoromatic: Implement "Power User" account level
- phoromatic: Add normalize results option to the phoromatic result page
- phoromatic: Support for jumping to test results page for XXX past days of test from schedule page
- phodevi: IBM POWER hardware detection improvements

Phoronix Test Suite 5.4 Milestone 3
20 October 2014

- pts-core: Introduce basic system logging capabilities for services
- pts-core: Try downloading files from remote download caches up to two times in event of failure / checksum issues
- phoromatic: Start a basic logger of Phoromatic Server events
- phoromatic: Add new create schedule interface
- phoromatic: Properly hook in system ID / group validation for test schedules
- phoromatic: Support for editing schedules from the web UI